# DeviceGatewayService

./: .coverage  .dockerignore  .env  .gitignore  Dockerfile  README.md  celerybeat-schedule  docker-compose.yml  dockerfile  gateway.py  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.localstack/cache/: machine.json
App/models/: base.py  message_schema.py  status.py
alembic/: env.py
app/: database.py
app/celery/: config.py  start.py  tasks.py
app/config/: aws_settings.py  celery_app.py  db_settings.py  settings.py  simulation_settings.py
app/gateway/: sender.py  sqs.py  worker.py
app/gateway/concurrency/: __init__.py  base_worker.py  kafka_consumer_worker.py  kafka_producer_worker.py  (+3 more)
app/infrastructure/: redis_client.py  redis_repo.py
app/models/: __init__.py  base.py  client.py  device.py  device_message.py  message.py  message_schema.py  send_result_schema.py  status.py
app/tasks/: kafka_tasks.py
app/templates/: message_template.xml
app/utils/: env_loader.py  logger_provider.py  message_factory.py  shutdown.py  sqs_client_stdlib.py  timing.py
concurrency/: __init__.py  base_worker.py  kafka_consumer_worker.py  kafka_producer_worker.py  sqs_consumer_worker.py  sqs_producer_worker.py  thread_manager.py
concurrency_final/: __init__.py  base_worker.py  kafka_consumer.py  kafka_producer.py  sqs_consumer.py  sqs_producer.py  thread_manager.py
kafka/: consumer.py  producer.py
services/: __init__.py  logging_service.py
tests/: conftest.py  test_message_schema.py  test_send_result_schema.py
tests/integration/: test_database.py
(+81 files in other folders)
