[tool.poetry]
name = "device-gateway-service"
version = "0.1.0"
description = "Simulates devices and sends XML messages to SQS via LocalStack"
readme = "README.md"
authors = ["Bety <elisabeta.onoriu99@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
boto3 = ">=1.34,<2.0"
sqlalchemy = ">=2.0.43,<3.0.0"
alembic = ">=1.13,<2.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
python-dotenv = ">=1.0,<2.0"
awscli = ">=1.42.12,<2.0.0"
pydantic = ">=2.7,<3"
pydantic-settings = ">=2.10.1,<3.0.0"
uvicorn = "^0.35.0"
redis = "^5"
localstack-client = "^2.10"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pylint = "^3.3.8"
awscli-local = "^0.22.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
